--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translators",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Translators is a library which aims to bring free, multiple, enjoyable translation to individuals and students in Nodejs.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "mocha": "mocha",
     "pretest": "npm run build",
     "test": "npm run eslint && npm run mocha",
-    "patch": "npm version patch"
+    "postgit": "npm version patch"
   },
   "author": "Edward Zhu (zhuhy163@163.com)",
   "license": "MIT",
