--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretest": "npm run build",
     "test": "npm run eslint && npm run mocha",
     "git": "git add . && git commit -m",
-    "postgit": "npm version patch"
+    "postgit": "npm version patch && git push --all"
   },
   "author": "Edward Zhu (zhuhy163@163.com)",
   "license": "MIT",
@@ -28,8 +28,9 @@
     "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-env": "^7.16.8",
+    "chai": "^4.3.7",
     "eslint": "^8.7.0",
-    "mocha": "^9.1.4"
+    "mocha": "^10.2.0"
   },
   "keywords": [
     "javascript",
